# biliard-project

./: games.db  games.db-shm  games.db-wal  index.html  package-lock.json  package.json  tsconfig.json
src/: AnalyticsPage.css  AnalyticsPage.js  AnalyticsPage.tsx  App.css  App.js  App.tsx  Categories.js  Categories.tsx  CreateCategory.css  CreateCategory.js  CreateCategory.tsx  EditGame.js  EditGame.tsx  GameContext.js  GameContext.tsx  Home.css  Home.js  Home.tsx  Options.css  Options.js  Options.tsx  PasswordModal.js  PasswordModal.tsx  PriceAnalytics.css  PriceAnalytics.js  PriceAnalytics.tsx  TrafficAnalytics.js  TrafficAnalytics.tsx  games.db-wal  main.js  main.tsx
src-tauri/: .env  Cargo.toml  games.db  games.db-shm  games.db-wal  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
